# SolubilityPredictor

./: app.py  main.py  packages.txt  pca.joblib  pyproject.toml  requirements.txt  solubility_model.pth
data/: main.py  pyg_converter.py  raw.py  test.ipynb  test_pyg_conversion.py
model/: early_stopping.py  train.py  train_with_early_stopping.py
